--- a/admin_add_product_detail.html
+++ b/admin_add_product_detail.html
@@ -6,13 +6,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/navbar.css">
-    <link rel="stylesheet" href="css/add_product_body.css">
+    <link rel="stylesheet" href="css/admin_add_product_detail.css">
     <link rel="stylesheet" href="css/size-selector.css">
     <title>Adko Petko Market</title>
 </head>
 <body>
 
-<!--**************** START OF TOP NAVBAR ********************-->
+<!--**************** START OF TOP ADMIN NAVBAR ********************-->
 <!-- Horny cierny pruh -->
 <div class="top-bar">
     Až 50% zľava na vybrané produkty do konca augusta
@@ -55,31 +55,20 @@
 
         <!-- navigacne menu -->
         <div class="collapse navbar-collapse justify-content-end" id="navmenu">
-            <ul class="navbar-nav ms-auto d-flex">
-                <li class="menu-item">
+            <ul class="navbar-nav ms-auto d-flex align-items-center">
+                <li class="menu-item d-flex align-items-center">
                     <img src="images/lupa.png" alt="lupa" class="navbar-icon">
                     <input type="text" class="form-control nav-textfield" placeholder="Vyhľadaj">
                 </li>
-                <li class="menu-item active">
-                    <a class="nav-link" href="#">
-                        <img src="images/kosik.png" alt="Košík" class="navbar-icon">
-                        <span>2 Košík</span>
-                    </a>
+                <li class="menu-item d-flex align-items-center ms-3">
+                    <span style="font-weight: bold;">STE PRIHLÁSENÝ AKO ADMIN</span>
                 </li>
-                <li class="menu-item">
-                    <a class="nav-link" href="#">
-                        <img src="images/prihlasenie.png" alt="login" class="navbar-icon">
-                        Prihlásenie
-                    </a>
-                </li>
-                <li class="menu-item">
-                    <a class="nav-link" href="#">
-                        <img src="images/podpora.png" alt="podpora" class="navbar-icon">
-                        Podpora
-                    </a>
+                <li class="menu-item d-flex align-items-center ms-3">
+                    <button class="btn btn-dark btn-sm">Odhlásiť sa</button>
                 </li>
             </ul>
         </div>
+
     </div>
 </nav>
 
@@ -91,36 +80,28 @@
                 aria-label="Close"></button>
     </div>
     <div class="offcanvas-body">
-        <ul class="navbar-nav ms-auto d-flex">
-            <li class="menu-item">
+        <ul class="navbar-nav ms-auto d-flex flex-column align-items-start">
+            <li class="menu-item d-flex align-items-center mb-3">
                 <img src="images/lupa.png" alt="lupa" class="navbar-icon">
                 <input type="text" class="form-control nav-textfield" placeholder="Vyhľadaj">
             </li>
-            <li class="menu-item">
-                <a class="nav-link" href="#">
-                    <img src="images/kosik.png" alt="Košík" class="navbar-icon">
-                    2 Košík
-                </a>
+            <li class="menu-item mb-2">
+                <span style="font-weight: bold;">STE PRIHLÁSENÝ AKO ADMIN</span>
             </li>
             <li class="menu-item">
-                <a class="nav-link" href="#">
-                    <img src="images/prihlasenie.png" alt="login" class="navbar-icon">
-                    Prihlásenie
-                </a>
-            </li>
-            <li class="menu-item">
-                <a class="nav-link" href="#">
-                    <img src="images/podpora.png" alt="podpora" class="navbar-icon">
-                    Podpora
-                </a>
+                <button class="btn btn-dark btn-sm">Odhlásiť sa</button>
             </li>
         </ul>
     </div>
+
 </div>
 
 <!-- ********************************************* END OF NAVBAR  **************************************************-->
 
 <h1 class="section-title">Nový produkt</h1>
+
+
+
 
 <div class="container">
     <div class="product-images-grid" >
@@ -214,6 +195,10 @@
 <script src="javascript-files/quantities.js"></script>
 <script src="javascript-files/image-zoom.js"></script>
 <script src="javascript-files/type-selector.js"></script>
+<!-- Bootstrap JavaScript -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 
 </body>
 </html>
